--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
                 <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
             </div>
         </section>
-        <!-- JSON Data Section -->
-        <section class="mt-5 text-center" id="json-data-section">
-            <div id="showDataJSON"></div>
-        </section>
+        <!-- JSON Data Section was here before. testing -->
+        
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
@@ -204,57 +202,5 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
-    <script>
-
-        /*
-        * RENDERING THE JSON TABLE
-        * Get JSON data from file
-        * Get headers from retrieved data
-        * Set headers for table
-        * Add data to table
-        * Add table to DOM
-        */
-        fetch('./list_data.json')
-            .then(response => response.json())
-            .then(data => {
-
-                /*
-                This section creates the base table and finds the root json node.
-                */
-                var jsonTable = document.createElement("table");
-                var tr = jsonTable.insertRow(-1);   
-                jsonTable.style.width = "100%";
-                let root;
-                for (let prop in data) {
-                    root = prop;
-                }
-
-                /*
-                This section selects the headers for the table
-                */
-                let headers = Object.keys(data[root][0]);
-                headers.forEach(header => {
-                    var th = document.createElement("th");      
-                    th.innerHTML = header;
-                    tr.appendChild(th);
-                })              
-                /*
-                This section adds the data into each row of the list
-                */
-                let items = Object.keys(data[root]);
-                items.forEach(item => {
-                    tr = jsonTable.insertRow(-1);
-                    for (let key in data[root][item]) {
-                       var tabCell = tr.insertCell(-1);
-                       tabCell.innerHTML = data[root][item][key];
-                    }
-                })
-                /*
-                This section adds the table to the HTML
-                */
-                var divContainer = document.getElementById("showDataJSON");
-                divContainer.innerHTML = "";
-                divContainer.appendChild(jsonTable);
-            });
-    </script>  
+  
 </html>
