--- a/list.html
+++ b/list.html
@@ -19,14 +19,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">INFO202</a>
+                <a class="navbar-brand" href="./index.html">My Webpage</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">List</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
@@ -56,14 +56,17 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <!-- TOOK THE IPAD PIC OUT HERE BY COMMENTING OUT THE BELOW -->
+                <!-- <img class="img-fluid" src="assets/img/ipad.png" alt="..." /> -->
+
+                <!--Here is where the table will be loaded in.  The actual table will be loaded in JavaScript.-->
+                <section class="mt-5 text-center">
+                    <div id="showDataJSON"></div>
+                </section>
             </div>
         </section>
         <!-- JSON Data Section was here before. testing -->
-        <!--Here is where the table will be loaded in.  The actual table will be loaded in JavaScript.-->
-        <section class="mt-5 text-center">
-            <div id="showDataJSON"></div>
-        </section>
+        
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
@@ -226,6 +229,8 @@
                 var jsonTable = document.createElement("table");
                 var tr = jsonTable.insertRow(-1);   
                 jsonTable.style.width = "100%";
+                jsonTable.style.color = "white"; // Set text color to white
+                jsonTable.style.marginTop = "-100px";
                 let root;
                 for (let prop in data) {
                     root = prop;
