task 3 XML encoding
json converted to xml, plus written accompanied dtd

--- a/list.html
+++ b/list.html
@@ -230,7 +230,7 @@
                 var tr = jsonTable.insertRow(-1);   
                 jsonTable.style.width = "100%";
                 jsonTable.style.color = "white"; // Set text color to white
-                jsonTable.style.marginTop = "-100px";
+                jsonTable.style.marginTop = "-100px"; // moved it up a bit to display more easily
                 let root;
                 for (let prop in data) {
                     root = prop;
